# agent-core-temp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  OPENCLAW_INTEGRATION.md  PERFORMANCE.md  PROGRESS.md  README.md  README.md.bak  body.json  docker-compose.yml
.github/workflows/: ci.yml
adapters/paperclip/: Cargo.toml
adapters/paperclip/src/: main.rs
benches/: idempotency_bench.rs  idempotency_benchmark.rs  performance.rs  scheduler_bench.rs  wasm_bench.rs
docs/: DEERFLOW_LEARNINGS.md  scheduler.md  wasm_host_functions.md
examples/: demo.rs  openclaw_integration  openclaw_integration.rs  openclaw_plugin.ts  wasm_plugin.rs
investor-package/: 01-whitepaper.md  02-faq.md  03-performance.md  04-demo-script.md
src/: error.rs  hlc.rs  lib.rs  main.rs  main.rs.bak
src/attestation/: mod.rs
src/extension/: mod.rs  wasm.rs  wasm.rs.bak
src/idempotency/: chaos_tests.rs  jepsen_tests.rs  keygen.rs  memory.rs  mod.rs  mod.rs.bak  rocksdb.rs  sled.rs  tests.rs
src/idempotency.bak/: linearizability_tests.rs  manager.rs  predictor.rs  property_tests.rs  store.rs
src/ingress/: mod.rs  mod.rs.bak
src/observability/: dynamic.rs  mod.rs
src/runtime/: executor.rs  mod.rs
src/scheduler/: memory.rs  metrics.rs  mod.rs  redis.rs  redis.rs.bak  redis_scheduler.rs
src/wasm/: memory.rs  mod.rs  wasmtime.rs
src/workflow/: mod.rs
tests/: jepsen_idempotency.rs  jepsen_idempotency.rs.disabled  scheduler_redis.rs  scheduler_redis_integration.rs  wasm_sandbox_test.rs
tools/: load_generator.rs
