[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"

[dependencies]
tokio = { version = "1.36", features = ["full", "rt-multi-thread", "tracing"] }
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
arc-swap = "1.6"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
pin-project = "1.1"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
memsec = "0.7"
# fuser = "0.14"
libc = "0.2"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
uuid = { version = "1.6", features = ["v4"] }
axum = "0.7"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
rand = "0.8"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }