[package]
name = "agent-core-temp"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
authors = ["d87skg <jmhbldg@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular Rust execution engine for AI agents"
repository = "https://github.com/d87skg/agent-core-temp"
documentation = "https://docs.rs/agent-core"
readme = "README.md"
keywords = ["ai", "agent", "workflow", "execution", "runtime"]
categories = ["development-tools", "asynchronous"]

[dependencies]
tokio = { version = "1.40", features = ["full", "rt-multi-thread", "tracing"] }
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
arc-swap = "1.6"
petgraph = "0.6"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
metrics-util = "0.17"
futures = "0.3"
pin-project = "1.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
axum = "0.7"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
memsec = "0.7"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
ring = "0.17"
base64 = "0.22"
prometheus = "0.13"
chrono = "0.4"
wasmtime = { version = "26", features = ["async", "cranelift", "parallel-compilation"] }
wasmtime-wasi = "26"
async-trait = "0.1"
lru = "0.10"
wat = "1.0"
rand = "0.8"
url = "2.5"
# 新增 HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
backon = "1.5.0"

# 可选依赖
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
sled = { version = "0.34", optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
rand = "0.8"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] } # 用于测试

[features]
default = []
redis-scheduler = ["redis"]
sled-storage = ["sled"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "idempotency_benchmark"
harness = false

[[bench]]
name = "idempotency_bench"
harness = false

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "wasm_bench"
harness = false